add a new parameter for PlacedMesh[alwaysRender] it defines whether a given 3D model will always be rendered, regardless of the render distance.
added MSAA antialiasing with x4 sampling to render.

Fixed several bugs with dynamic light source and subLightmap for static light sources

Debug button remapping, from buttons 1 to 9 to numpad